On mobile, set the annotation dialog to a fixed position
The relative positioning is not great on mobile and can conflict with
the context menu position (differs from one platform to another).

This sets the dialog at the bottom of the page. If a selection is made
at the very end of the screen, the dialog would cover it but it doesn't
prevent to highlight and seems a better trade-off for consistency than
moving it to the top in such cases.

Resolves #1037
Resolves #915
Resolves #682
Resolves #211

--- a/web/ui/styles/annotations.scss
+++ b/web/ui/styles/annotations.scss
@@ -65,6 +65,10 @@
       @apply font-sans text-base text-app-fg bg-gray-100 rounded-lg;
       @apply flex flex-col gap-2;
       @apply p-2;
+
+      @screen touch {
+        @apply rounded-none;
+      }
     }
 
     &--colors {
@@ -76,6 +80,10 @@
       width: 0;
       border-right: 8px solid transparent;
       border-left: 8px solid transparent;
+
+      @screen touch {
+        display: none;
+      }
     }
 
     &[data-position="bottom"] &--arrow {
